Fix typo in repository name

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,6 +1,6 @@
 // *************************************
 //
-// # jigsass-object-grid
+// # jigsass-objects-grid
 // -> A simple flexbox-based grid system
 //
 // Author: TxHawks (tofu.hawks@gmail.com)
