--- a/scss/lib/_grid.scss
+++ b/scss/lib/_grid.scss
@@ -1,6 +1,6 @@
 // *************************************
 //
-// # jigsass-object-grid Config
+// # jigsass-objects-grid Config
 // -> Configuration variables
 //
 ////
@@ -16,19 +16,19 @@
 // -------------------------------------
 
 @if (not function-exists(jigsass-get)) {
-  @error '`jigsass-object-grid` has a dependency on `jigsass-tools-maps. Please import it.'
+  @error '`jigsass-objects-grid` has a dependency on `jigsass-tools-maps. Please import it.'
 }
 @if (not mixin-exists(jigsass-mq)) {
-  @error '`jigsass-object-grid` has a dependency on `jigsass-tools-mq. Please import it.'
+  @error '`jigsass-objects-grid` has a dependency on `jigsass-tools-mq. Please import it.'
 }
 @if (not function-exists(jigsass-rhythm)) {
-  @error '`jigsass-object-grid` has a dependency on `jigsass-tools-typography`. Please import it.'
+  @error '`jigsass-objects-grid` has a dependency on `jigsass-tools-typography`. Please import it.'
 }
 @if (not mixin-exists(jigsass-object)) {
-  @error '`jigsass-object-grid` has a dependency on `jigsass-tools-selectors. Please import it.'
+  @error '`jigsass-objects-grid` has a dependency on `jigsass-tools-selectors. Please import it.'
 }
 @if (not mixin-exists(jigsass-bidi)) {
-  @error '`jigsass-object-grid` has a dependency on `jigsass-tools-bidi`. Please import it.'
+  @error '`jigsass-objects-grid` has a dependency on `jigsass-tools-bidi`. Please import it.'
 }
 
 
