--- a/sgSrc/sg.scss
+++ b/sgSrc/sg.scss
@@ -1,6 +1,6 @@
 // *************************************
 //
-// # jigsass-object-grid style guide generator
+// # jigsass-objects-grid style guide generator
 // -> It is a best practice for JigSass modules to
 //    not automatically generate css and documentation
 //    on `@import`. Please use this file to enable css
