--- a/scss/lib/_config.scss
+++ b/scss/lib/_config.scss
@@ -1,6 +1,6 @@
 // *************************************
 //
-// # jigsass-object-grid Config
+// # jigsass-objects-grid Config
 // -> Configuration variables
 //
 ////
