--- a/scss/lib/_item.scss
+++ b/scss/lib/_item.scss
@@ -24,11 +24,11 @@
 @if (not function-exists(jigsass-rhythm)) {
   @error '`jigsass-objects-grid` has a dependency on `jigsass-tools-typography`. Please import it.'
 }
-@if (not mixin-exists(jigsass-object)) {
-  @error '`jigsass-objects-grid` has a dependency on `jigsass-tools-selectors. Please import it.'
-}
 @if (not mixin-exists(jigsass-bidi)) {
   @error '`jigsass-objects-grid` has a dependency on `jigsass-tools-bidi`. Please import it.'
+}
+@if (not mixin-exists(jigsass-define-object)) {
+  @error '`jigsass-objects-grid` has a dependency on `jigsass-tools-selectors. Please import it.'
 }
 
 
@@ -87,6 +87,10 @@ Will Generate:
 ///   The name of a miscellaneous media query condition.
 /// ---
 @mixin jigsass-grid-item($modifier: false, $from: false, $until: false, $misc: false) {
+  @if (not mixin-exists(jigsass-object)) {
+    @error '`jigsass-objects-grid` has a dependency on `jigsass-tools-selectors. Please import it.'
+  }
+
   @include jigsass-object(#{$jigsass-grid-item-class}, $from, $until, $misc, $modifier)
 }
 
